# indigo

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CONTRIBUTING.md  DirectServiceFlowchart.mmd  Dockerfile  LICENSE.md  Makefile  README.md  bake.hcl  compose.yml  entrypoint.sh  mkdocs.yml  nginx.conf  package-lock.json  package.json  playwright.config.ts  pyproject.toml  readme.md  requirements.txt  zensical.toml
.github/workflows/: playwright.yml  workflow.yml
diagram/: authCheck.mmd  authVend.mmd  class.mmd  classDiagramPseudocode.mmd  directServiceWorkflow.mmd  enums.mmd  gantt.mmd  uiPageFlow.mmd  uiWorkflow.mmd
docs/: authentication.md  design.md  features.md  index.md
docs/administration-guide/: configuration.md  installation.md
docs/diagram/: authCheck.mmd  classDiagramImplementation.mmd
docs/example/: compose.yml  config-frontend.json  config.json
docs/override/: main.html
docs/schema/: api.json  config-schema.json
docs/specifications/: security.md  terminology.md
docs/stylesheets/: file-tree.css
docs/web/about/: authors.md  legal.md  license.md
docs/web/administration-guide/: configuration.md  installation.md  maintenance.md  ssl.md
docs/web/contributing/: convention.md  dco-agreement.md  online-documentation.md  spdx.md
docs/web/specifications/: api.md  design.md  security.md  terminology.md
docs/web/stylesheet/: color.css  content.css  file-tree.css  style.css  swagger.css
docs/web/user-manual/: stub.md
nginx/: nginx.conf
nginx/indigo.d/: 443.conf  80-redirect.conf  80.conf
